--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="%sveltekit.assets%/globals.css">
 		%sveltekit.head%
 	</head>
-	<body>
+	<body data-sveltekit-preload-data="hover">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
